More app overflow issues

--- a/frontend/src/css/about.css
+++ b/frontend/src/css/about.css
@@ -8,7 +8,7 @@
 
 .heroAbout {
   position: absolute;
-  background-image: url("./images/hero-edit.png");
+  background-image: url("../images/hero-edit.png");
   background-size: cover;
   background-repeat: no-repeat;
   top: 0;
